chore: updated CraftVentory dependency to version 2.6.0 (#123)